--- a/package.json
+++ b/package.json
@@ -21,4 +21,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
     },
+    "dependencies": {
+        "sweetalert": "^2.1.2"
+    }
 }
